--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="https://www.sosparty.io/imgs/sos-logo.png" alt="Bootstrap"
+            <a class="navbar-brand" href="index.html"><img src="https://www.sosparty.io/imgs/sos-logo.png" alt="Bootstrap"
                     width="45" height="40"><b>SOS Party </b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -100,6 +100,10 @@
             <h1>We host the <span>#1</span> rated <span>team building</span> and <span> offsite events </span>for
                 in-person, hybrid & remote teams.</h1>
             <p>100+ unique activities intentionally designed to build happier teams. Rated 4.91/5 in 1,000+ reviews.</p>
+            <div class="button">
+                <a class="btn btn-primary btn-lg" href="loginandsignup.html" role="button">Signup</a>
+                <a class="btn btn-secondary btn-lg" href="loginandsignup.html" role="button">Login</a>
+            </div>
         </div>
 
         <div class="right">
